# frvt

./: .gitignore  README.md  gvfrvt.code-workspace
11/: NISTplot.ipynb  TFthread.py  compileAndRunFrvt.sh  frvt_ongoing.gpg.txt  modelFolderRename.sh  plot.py  requirements.txt  run_validate_11.sh  validate.py
11/doc/: version.txt
11/input/pnas/: enroll.txt  match.txt  verif.txt
11/input/pretest/: enroll.txt  match.txt  verif.txt
11/lib/: libopencv_highgui.so.4.1.2  libopencv_videoio.so.4.1.2
11/src/nullImpl/: CMakeLists.txt  GVimplfrvt11.cpp  GVimplfrvt11.h
11/validation/: validate.py
common/pnas/: S001-0_1.ppm  S001-0_2.ppm  S002-0_3.ppm  S002-0_4.ppm  S003-0_5.ppm  S003-0_6.ppm  S004-0_7.ppm  S004-0_8.ppm  S005-0_10.ppm  S005-0_9.ppm  S006-0_11.ppm  S006-0_12.ppm  S007-0_13.ppm  S007-0_14.ppm  S008-0_15.ppm  S008-0_16.ppm  S009-0_17.ppm  S009-0_18.ppm  S010-0_19.ppm  S010-0_20.ppm  S011-0_21.ppm  S011-0_22.ppm  S012-0_23.ppm  S012-0_24.ppm  S013-0_25.ppm  S014-0_26.ppm  S015-0_27.ppm  S016-0_28.ppm  S017-0_29.ppm  S018-0_30.ppm  S019-0_31.ppm  S020-0_32.ppm  S021-0_33.ppm  S022-0_34.ppm  S023-0_35.ppm  S024-0_36.ppm  S025-0_37.ppm  S026-0_38.ppm  S027-0_39.ppm  S028-0_40.ppm
common/src/include/: facedetection_export.h  tensorflow_mtcnn.cpp
common/src/include/interactive_face_detection_demo/: detectors.cpp  detectors.hpp  interactive_face_detection.hpp
